applied style to fb iframe to fix alignment issue

--- a/css/core.css
+++ b/css/core.css
@@ -123,7 +123,7 @@ div.footer_nav a {
 div.socialnetwork {
 	float:left;
 	width:155px;
-	text-align:right;
+	text-align:right !important;
 	color:#000000;
 	color:rgba(255, 255, 255, 0.6);
 }
@@ -361,6 +361,8 @@ div.second_saterday {background: url(../images/second_saterday_bg.png) no-repeat
 
 img[alt~='External'] {padding-left:0.5em; vertical-align: text-bottom;}
 
+
+iframe.fb_ltr {margin:0; padding:0 0 0 13px; text-align:right;}
 
 
 
